# CosmOS

./: Cargo.toml  README.md  build.rs  cosmos.ps1  justfile  rust-toolchain.toml
.cargo/: config.toml
boot/: Cargo.toml  uefi-linker.ld
boot/.cargo/: config.toml
boot/src/: error.rs  kernel_jump.rs  kernel_loader.rs  main.rs  memory_setup.rs  stage1.asm  stage2.asm  uefi-main.rs  uefi_main.rs
boot/src/uefi/: boot.rs  console.rs  file.rs  memory.rs  mod.rs
kernel/: Cargo.toml  build.rs  linker.ld
kernel/.cargo/: config.toml
kernel/src/: lib.rs  main.rs  serial.rs  vga.rs
kernel/src/arch/: mod.rs
kernel/src/arch/x86_64/: gdt.rs  idt.rs  interrupts.rs  mod.rs
kernel/src/mm/: frame_allocator.rs  heap.rs  memory_map.rs  mod.rs  paging.rs
