[package]
name = "cosmosbootloader"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "cosmosbootloader"
path = "src/main.rs"

[[bin]]
name = "cosmosbootloader-uefi"
path = "src/uefi_main.rs"

[dependencies]
# None, pure Assembly and Rust

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
opt-level = "z"  # Optimize for size
lto = true
strip = true
codegen-units = 1
