[package]
name = "cosmos"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "cosmos"
path = "src/main.rs"

[dependencies]
x86_64 = "0.15.1"
spin = "0.9.8"
linked_list_allocator = "0.10.5"
lazy_static = { version = "1.5.0", features = ["spin_no_std"] }
uart_16550 = "0.3.1"
pic8259 = "0.11.0"
pc-keyboard = "0.7.0"

[dependencies.log]
version = "0.4"
default-features = false

[dependencies.ufmt]
version = "0.2"
default-features = false
